--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,10 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
 python-dotenv==1.1.1
+PyYAML==6.0.2
 requests==2.32.5
 requests-oauthlib==2.0.0
+responses==0.25.8
 rsa==4.9.1
 soupsieve==2.8
 typing_extensions==4.15.0
